--- a/pealeht.css
+++ b/pealeht.css
@@ -3,14 +3,16 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
     color: #FF6F61;
-    font-size: 5em;
+    font-size: 7.5em;
     text-align: center;
-    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
-    font-family: 'Comic Sans MS', sans-serif;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 1px;
     margin: 0;
 }
 
@@ -23,7 +25,7 @@ h1 {
 
 .kirjeldus {
     color: #5c5c5cdf;
-    font-size: 1.5em;
+    font-size: 1.25em;
     text-align: center;
     padding: 2px;
 }
