--- a/filmid.css
+++ b/filmid.css
@@ -45,3 +45,18 @@ h1 {
 .teine p {
     margin-bottom: 20px;
 }
+
+.video {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16 / 9; /* Tagab õige suhte */
+    border: none;
+    border-radius: 8px;
+}
+
+/* Pildi stiilimine */
+.image {
+    height: 575px;
+    width: 450px;
+    border-radius: 8px;
+}
