--- a/raamatud.css
+++ b/raamatud.css
@@ -1,11 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Poppins:wght@700&display=swap');
 
+:root {
+    --background-color: linear-gradient(to bottom right, #F7E6B9, #F4C2C2);  /* hele taust */
+    --text-color: #555;         /* tume teksti värv */
+    --primary-color: #4CAF50;      /* nupu värv */
+    --secondary-color: #f4f4f4;
+}
+
 body {
-    background: linear-gradient(to bottom right, #F7E6B9, #F4C2C2);
+    background: var(--background-color);
     font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
     margin: 20px;
-    color: #333;
+    color: var(--text-color);
+}
+
+body.dark-mode {
+    --background-color: #121212;  /* tume taust */
+    --text-color: #ffffff;         /* hele teksti color */
+    --primary-color: #FF5722;      /* nupu värv */
+    --secondary-color: #333333;    
 }
 
 h1 {
@@ -26,15 +40,36 @@ h1 {
     transition: background-color 0.3s ease; /* Sujuv värvi muutus */
 }
 
+body.dark-mode .book-section:nth-child(odd) {
+    background-color:#1e1e1e;
+    color: white;
+}
+
 /* Vahelduvad taustavärvid */
 .book-section:nth-child(odd) {
     background-color: #FBEAD1; /* Pastelne kollane */
-    color: #333; /* Teksti värv */
 }
 
 .book-section:nth-child(even) {
     background-color: #F9E6E6; /* Pastelne roosa */
-    color: #333; /* Teksti värv */
+}
+
+body.dark-mode .book-section:nth-child(even) {
+    background-color:#1e1e1e;
+    color: white;
+}
+
+button {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #333;
 }
 
 /* Pildi stiil */
@@ -54,10 +89,8 @@ h1 {
 
 .book-details h2 {
     margin: 0; /* Eemaldab liigsed marginaalid pealkirjalt */
-    color: #333; /* Pealkirja värv */
 }
 
 .book-details p {
     margin: 5px 0; /* Väike vahe lõikude vahel */
-    color: #555; /* Teksti värv */
 }
