--- a/raamatud.css
+++ b/raamatud.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Poppins:wght@700&display=swap');
 
 :root {
-    --background-color: linear-gradient(to bottom right, #F7E6B9, #F4C2C2);  /* hele taust */
-    --text-color: #555;         /* tume teksti värv */
-    --primary-color: #4CAF50;      /* nupu värv */
+    --background-color: linear-gradient(to bottom right, #F7E6B9, #F4C2C2);  
+    --text-color: #555;        
+    --primary-color: #4CAF50;      
     --secondary-color: #f4f4f4;
 }
 
@@ -16,9 +16,9 @@ body {
 }
 
 body.dark-mode {
-    --background-color: #121212;  /* tume taust */
-    --text-color: #ffffff;         /* hele teksti color */
-    --primary-color: #FF5722;      /* nupu värv */
+    --background-color: #121212;  
+    --text-color: #ffffff;         
+    --primary-color: #FF5722;      
     --secondary-color: #333333;    
 }
 
@@ -33,11 +33,11 @@ h1 {
 .book-section {
     display: flex;
     align-items: flex-start;
-    gap: 20px; /* Ruumi pildi ja teksti vahel */
-    margin-bottom: 20px; /* Tühi ruum enne piiri */
+    gap: 20px; 
+    margin-bottom: 20px; 
     padding: 20px;
-    border-bottom: 2px solid #FF6F61; /* Alumine joon sektsioonide vahel */
-    transition: background-color 0.3s ease; /* Sujuv värvi muutus */
+    border-bottom: 2px solid #FF6F61; 
+    transition: background-color 0.3s ease; 
 }
 
 body.dark-mode .book-section:nth-child(odd) {
@@ -45,13 +45,12 @@ body.dark-mode .book-section:nth-child(odd) {
     color: white;
 }
 
-/* Vahelduvad taustavärvid */
 .book-section:nth-child(odd) {
-    background-color: #FBEAD1; /* Pastelne kollane */
+    background-color: #FBEAD1; 
 }
 
 .book-section:nth-child(even) {
-    background-color: #F9E6E6; /* Pastelne roosa */
+    background-color: #F9E6E6; 
 }
 
 body.dark-mode .book-section:nth-child(even) {
@@ -72,25 +71,24 @@ button:hover {
     background-color: #333;
 }
 
-/* Pildi stiil */
 .book-section img {
     flex-shrink: 0;
-    width: 200px; /* Pildi laius */
-    height: auto; /* Säilita proportsioonid */
+    width: 200px; 
+    height: auto; 
 }
 
-/* Teksti stiil */
 .book-details {
     display: flex;
-    flex-direction: column; /* Pealkiri ja tekst vertikaalselt */
+    flex-direction: column; 
     justify-content: flex-start;
-    max-width: 800px; /* Piirab teksti laiust */
+    max-width: 800px; 
 }
 
 .book-details h2 {
-    margin: 0; /* Eemaldab liigsed marginaalid pealkirjalt */
+    margin: 0; 
 }
 
 .book-details p {
-    margin: 5px 0; /* Väike vahe lõikude vahel */
+    margin: 5px 0; 
 }
+
