--- a/raamatud.css
+++ b/raamatud.css
@@ -40,7 +40,7 @@ h3 {
     gap: 20px; 
     margin-bottom: 20px; 
     padding: 20px;
-    border-bottom: 2px solid #FF6F61; 
+    border-top: 2px solid #FF6F61; 
     transition: background-color 0.3s ease; 
 }
 
@@ -49,11 +49,11 @@ body.dark-mode .book-section:nth-child(odd) {
     color: white;
 }
 
-.book-section:nth-child(odd) {
+.book-section:nth-child(even) {
     background-color: #F4C2C2; 
 }
 
-.book-section:nth-child(even) {
+.book-section:nth-child(odd) {
     background-color: #F9E7B789; 
 }
 
