--- a/filmid.css
+++ b/filmid.css
@@ -18,7 +18,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     justify-content: center;
     align-items: center;
-    margin: 0;
+    margin: 20px;
     transition: all 0.3s ease;
 }
 
@@ -59,6 +59,7 @@ body.dark-mode .esimene {
     text-align: left;
     font-size: 1.1em;
     color: #4A4A4A;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .esimene p {
@@ -76,6 +77,7 @@ body.dark-mode .teine {
     font-size: 1.1em;
     color: #4A4A4A;
     border-top: 3px solid #FF6F61; /* Ääris lõpuosa ülaosas */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .teine p {
