--- a/raamatud.css
+++ b/raamatud.css
@@ -38,10 +38,11 @@ h3 {
     display: flex;
     align-items: flex-start;
     gap: 20px; 
-    margin-bottom: 20px; 
+ 
     padding: 20px;
     border-top: 3px solid #FF6F61; 
-    transition: background-color 0.3s ease; 
+    transition: background-color 0.3s ease;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
 }
 
 body.dark-mode .book-section:nth-child(odd) {
