ühise css arendus

--- a/filmid.css
+++ b/filmid.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Poppins:wght@700&display=swap');
+
 :root {
     --background-color: linear-gradient(to bottom right, #F7E6B9, #F4C2C2);  
     --text-color: #555;        
@@ -5,21 +7,9 @@
     --secondary-color: #f4f4f4;
 }
 
-body.dark-mode {
-    --background-color: #121212;
-    --text-color: #ffffff;
-    --primary-color: #FF5722;      /* nupu värv */
-    --secondary-color: #333333;    
-}
-
 body {
     background: var(--background-color);
     color: var(--text-color);
-    font-family: 'Montserrat', sans-serif;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-    transition: all 0.3s ease;
 }
 
 button {
@@ -36,11 +26,7 @@ button:hover {
 }
 
 h1 {
-    color: #FF6F61  ;
     font-size: 5em;
-    text-align: center;
-    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
-    font-family: 'Poppins', sans-serif;
 }
 
 h3 {
