--- a/filmid.css
+++ b/filmid.css
@@ -27,10 +27,10 @@ body.dark-mode .esimene {
 .teine {
     background-color: #f9e7b789;
     padding: 20px;
-    border-top: 3px solid #FF6F61; /* Peenike ääris ülal */
     text-align: left;
     font-size: 1.1em;
     color: #4A4A4A;
+    border-top: 3px solid #FF6F61;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -48,7 +48,7 @@ body.dark-mode .teine {
     text-align: left;
     font-size: 1.1em;
     color: #4A4A4A;
-    border-top: 3px solid #FF6F61; /* Ääris lõpuosa ülaosas */
+    border-top: 3px solid #FF6F61;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -56,17 +56,14 @@ body.dark-mode .teine {
     margin-bottom: 20px;
 }
 
-
-/* Iframe'i stiil, et tagada paindlik paigutus */
 .video {
     width: 100%;
     height: 100%;
-    aspect-ratio: 16 / 9; /* Tagab õige suhte */
+    aspect-ratio: 16 / 9;
     border: none;
     border-radius: 8px;
 }
 
-/* Pildi stiilimine */
 .image {
     height: 575px;
     width: 450px;
