--- a/raamatud.css
+++ b/raamatud.css
@@ -54,13 +54,15 @@ button:hover {
     flex-shrink: 0;
     width: 200px; 
     height: auto; 
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .book-details {
     display: flex;
     flex-direction: column; 
     justify-content: flex-start;
-    max-width: 800px; 
+    max-width: 1200px; 
 }
 
 .book-details h2 {
