--- a/filmid.css
+++ b/filmid.css
@@ -1,22 +1,9 @@
-button {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #333;
+body {
+    margin: 20px;
 }
 
 h1 {
     font-size: 5em;
-}
-
-h3 {
-    text-align: center;
 }
 
 body.dark-mode .esimene {
@@ -30,8 +17,10 @@ body.dark-mode .esimene {
     text-align: left;
     font-size: 1.1em;
     color: #4A4A4A;
-    border-top: 3px solid #FF6F61;
+    border-top: 2px solid #FF6F61;
+    border-bottom: 2px solid #FF6F61;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
 }
 
 .esimene p {
@@ -49,7 +38,9 @@ body.dark-mode .teine {
     font-size: 1.1em;
     color: #4A4A4A;
     border-top: 3px solid #FF6F61;
+    border-bottom: 2px solid #FF6F61;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
 }
 
 .teine p {
@@ -57,15 +48,22 @@ body.dark-mode .teine {
 }
 
 .video {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     aspect-ratio: 16 / 9;
     border: none;
-    border-radius: 8px;
+    border-radius: 20px;
+    padding: 5px;
+    padding-left: 0px;
 }
 
 .image {
     height: 575px;
     width: 450px;
-    border-radius: 8px;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+.lõpuosa {
+    border-radius: 10px;
 }
