--- a/raamatud.css
+++ b/raamatud.css
@@ -1,20 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Poppins:wght@700&display=swap');
 
-h1 {
-    font-size: 5em;
+body{
+    margin: 20px;
 }
 
-h3 {
-    text-align: center;
+h1 {
+    font-size: 5em;
 }
 
 .book-section {
     display: flex;
     align-items: flex-start;
     gap: 20px; 
- 
+    border-radius: 8px;
     padding: 20px;
-    border-top: 3px solid #FF6F61; 
+    border-top: 2px solid #FF6F61; 
+    border-bottom: 2px solid #FF6F61;
     transition: background-color 0.3s ease;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
 }
@@ -25,7 +26,7 @@ body.dark-mode .book-section:nth-child(odd) {
 }
 
 .book-section:nth-child(even) {
-    background-color: #F4C2C2; 
+    background-color: #F4C2C2;
 }
 
 .book-section:nth-child(odd) {
@@ -37,25 +38,13 @@ body.dark-mode .book-section:nth-child(even) {
     color: white;
 }
 
-button {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #333;
-}
-
 .book-section img {
     flex-shrink: 0;
     width: 200px; 
     height: auto; 
     padding-right: 20px;
     padding-left: 20px;
+    border-radius: 45px;
 }
 
 .book-details {
