--- a/raamatud.css
+++ b/raamatud.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Poppins:wght@700&display=swap');
-
 body{
     margin: 20px;
 }
@@ -55,7 +53,8 @@ body.dark-mode .book-section:nth-child(even) {
 }
 
 .book-details h2 {
-    margin: 0; 
+    margin: 0;
+    font-size: 1.5em; 
 }
 
 .book-details p {
