--- a/ühine.css
+++ b/ühine.css
@@ -17,6 +17,39 @@ body {
     --secondary-color: #f4f4f4;
 }
 
+.header {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 10px;
+    background-color: transparent;
+}
+
+.home-button img {
+    width: 35px;
+    height: auto;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+}
+
+.home-button img:hover {
+    transform: scale(1.05);
+}
+
+#themeSwitcher {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#themeSwitcher:hover {
+    background-color: #333;
+    transition: background-color 0.3s ease;
+}
+
 h1 {
     color: #FF6F61;
     font-size: 7.5em;
@@ -38,23 +71,13 @@ body.dark-mode {
     --secondary-color: #333333;    
 }
 
-button {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #333;
-    transition: background-color 0.3s ease;
-}
-
 .lõpuosa {
     padding: 20px;
     text-align: center;
     font-size: 1em;
     color: #4A4A4A;
+}
+
+body.dark-mode .lõpuosa {
+    color: white;
 }
